compiler/chipc-codegen/tests/llvm_ir/snapshots/llvm_ir__main@attributes.snap
---
source: compiler/chipc-codegen/tests/llvm_ir/main.rs
assertion_line: 35
expression: processed
---
; ModuleID = 'test-package'
source_filename = "test-package"
target datalayout = "<redacted>"
target triple = "<redacted>"

define internal void @fn_with_attrs() {
entry:
  br label %bb

bb:                                               ; preds = %entry
  ret void
}
